--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   dotted_border: ^2.1.0
   parent_child_checkbox: ^0.0.5
   url_launcher: ^6.1.14
+  dio: any
 
 dev_dependencies:
   flutter_test:
