--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,4 +64,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation 'com.yandex.android:maps.mobile:4.3.2-full'
+}
