--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -50,5 +50,7 @@
 	<string>sms</string>
 	<string>tel</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>Get album permissions</string>
 </dict>
 </plist>
