--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   restart_app: ^1.2.1
   yandex_mapkit: ^3.3.3
   dropdown_button2: ^2.3.9
+  highlight_text: ^1.7.0
 
 dev_dependencies:
   flutter_test:
